<resources>
    <string name="add_book_btn">Добавить книгу</string>
    <string name="view_book_btn">Посмотреть книги</string>
    <string name="book_name_hint">Название книги</string>
    <string name="author_hint">Автор книги</string>
    <string name="publication_date_hint">Дата публикации</string>
    <string name="amount_page_hint">Число страниц</string>
    <string name="amount_hint">Количество книги</string>
    <string name="place_hint">Тираж</string>
    <string name="add_book_text">Страница добавления книги</string>
    <string name="back_btn">Назад</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Button</string>
    <string name="first_fragment_label">first</string>
    <string name="second_fragment_label">second</string>
    <string name="action_settings">action_settings</string>
</resources>