<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/add_book_text"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/book_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:hint="@string/book_name_hint"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/author_hint"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_name"
        app:layout_constraintVertical_bias="0.02" />
    <EditText
        android:id="@+id/book_publication_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/publication_date_hint"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_author"
        app:layout_constraintVertical_bias="0.066" />
    <EditText
        android:id="@+id/book_amount_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_page_hint"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_publication_date"
        app:layout_constraintVertical_bias="0.098" />
    <EditText
        android:id="@+id/book_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_amount_page"
        app:layout_constraintVertical_bias="0.18" />
    <EditText
        android:id="@+id/book_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/place_hint"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_amount"
        app:layout_constraintVertical_bias="0.056" />
    <Button
        android:id="@+id/add_Book_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_book_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_place"
        />
</androidx.constraintlayout.widget.ConstraintLayout>